More TODO items

--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -586,6 +586,11 @@ qualitatively different solutions}
 
 \todo{Many examples of stars that are probably unimodal}
 
+\todo{Period - eccentricity plot? Tidal circularization (See "Debug MCMC
+continue")}
+
+\todo{Stars with Martig or Ness masses - m2_min}
+
 \section{Discussion}
 
 \todo{Return to our various assumptions and make sure that we discuss them
