fix unclosed todo

--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -589,7 +589,7 @@ qualitatively different solutions}
 \todo{Period - eccentricity plot? Tidal circularization (See "Debug MCMC
 continue")}
 
-\todo{Stars with Martig or Ness masses - m2_min}
+\todo{Stars with Martig or Ness masses - m2min}
 
 \section{Discussion}
 
