fix two undefined

--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -46,6 +46,7 @@
 \newcommand{\nposterior}{256}
 \newcommand{\nstars}{96,231}
 \newcommand{\nvisits}{397,559}
+\newcommand{\ncompanions}{xx}
 
 % for response to referee
 % \renewcommand{\resp}[1]{#1}
@@ -101,7 +102,7 @@ We select stars with probable companions by \todo{how?}.
 We provide (1) a catalog of \ncompanions\ companions for which the companion
 properties can be confidently determined, (2) a catalog of stars that likely
 have companions, but for  which more observations are needed to uniquely
-determine the orbital properties, and (3) posterior samplings for all \ntotal\
+determine the orbital properties, and (3) posterior samplings for all \nstars\
 stars in the parent sample.
 We highlight interesting systems and show the characteristics of stars with
 confidently determined companion properties.
