--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -105,9 +105,9 @@ stars observed in the
 We select stars with probable companions by making a cut on our posterior belief about
 the amplitude of the stellar radial-velocity variation induced by the orbit \todo{do we?}.
 % Results
-We provide (1)~a catalog of \ncompanions\ companions for which the stellar companion
+We provide (1)~a catalog of \todo{\ncompanions} companions for which the stellar companion
 properties can be confidently determined in a posterior sense,
-(2)~a catalog of stars that likely
+(2)~a catalog of stars \todo{YYY} stars that likely
 have companions, but for which (in most cases) more observations
 would be needed to uniquely
 determine the orbital properties, and (3)~posterior samplings for all orbital-companion
