--- a/paper/1-catalog/refs.bib
+++ b/paper/1-catalog/refs.bib
@@ -1,12 +1,42 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Adrian Price-Whelan at 2018-02-22 17:27:48 -0500 
+
+%% Created for Adrian Price-Whelan at 2018-02-25 22:04:09 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Hogg:2017,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2017arXiv171006068H},
+	Archiveprefix = {arXiv},
+	Author = {{Hogg}, D.~W. and {Foreman-Mackey}, D.},
+	Date-Added = {2018-02-26 03:04:07 +0000},
+	Date-Modified = {2018-02-26 03:04:08 +0000},
+	Eprint = {1710.06068},
+	Journal = {ArXiv e-prints},
+	Keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Physics - Data Analysis, Statistics and Probability, Statistics - Computation},
+	Month = oct,
+	Primaryclass = {astro-ph.IM},
+	Title = {{Data analysis recipes: Using Markov Chain Monte Carlo}},
+	Year = 2017}
+
+@article{Gelman:1992,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1992StaSc...7..457G},
+	Author = {{Gelman}, A. and {Rubin}, D.~B.},
+	Date-Added = {2018-02-26 02:15:38 +0000},
+	Date-Modified = {2018-02-26 02:15:40 +0000},
+	Doi = {10.1214/ss/1177011136},
+	Journal = {Statistical Science},
+	Pages = {457-472},
+	Title = {{Inference from Iterative Simulation Using Multiple Sequences}},
+	Volume = 7,
+	Year = 1992,
+	Bdsk-Url-1 = {https://dx.doi.org/10.1214/ss/1177011136}}
 
 @article{De-Lee:2013,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
