--- a/notebooks/Asteroseismology.ipynb
+++ b/notebooks/Asteroseismology.ipynb
@@ -70,9 +70,12 @@
    },
    "outputs": [],
    "source": [
-    "stars = session.query(AllStar).join(StarResult, Status)\\\n",
-    "                              .filter(Status.id.in_([1,2]))\\\n",
-    "                              .all()\n",
+    "# stars = session.query(AllStar).join(StarResult, Status)\\\n",
+    "#                               .filter(Status.id.in_([1,2]))\\\n",
+    "#                               .all()\n",
+    "# len(stars)\n",
+    "\n",
+    "stars = session.query(AllStar).filter(AllStar.logg < 1.).all()\n",
     "len(stars)"
    ]
   },
@@ -119,7 +122,7 @@
    "outputs": [],
    "source": [
     "huh = df.groupby('apogee_id')\n",
-    "tbl = huh.filter(lambda x: np.percentile(x['K'], 15) > 1.)\n",
+    "tbl = huh.filter(lambda x: np.percentile(x['K'], 15) > 0.5)\n",
     "len(tbl)"
    ]
   },
@@ -132,6 +135,13 @@
     "def get_P(m1, m2, logg):\n",
     "    logg = np.asarray(logg)\n",
     "    return (2*np.pi * G**(1/4.) * (m1+m2) / (m1**(3/4.)) * (10**logg*u.cm/u.s**2)**(-3/4)).to(u.day)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -270,7 +280,7 @@
    "outputs": [],
    "source": [
     "corner_tmp = tbl[(tbl['logg'] > 0.) & (tbl['logg'] < 2.)].groupby('apogee_id')\n",
-    "corner = corner_tmp.filter(lambda x: np.percentile(x['P'], 85) < get_P(1.5*u.Msun, 0.01*u.Msun, x['logg']).value[0])"
+    "corner = corner_tmp.filter(lambda x: np.percentile(np.log(x['P']), 85) < np.log(get_P(1.5*u.Msun, 0.01*u.Msun, x['logg']).value[0]))"
    ]
   },
   {
@@ -280,7 +290,7 @@
    "outputs": [],
    "source": [
     "cmap = plt.get_cmap('magma_r')\n",
-    "norm = LogNorm(1, 10)\n",
+    "norm = LogNorm(0.5, 10)\n",
     "colors = cmap(norm(corner['K']))\n",
     "\n",
     "for apid in np.unique(corner['apogee_id']):\n",
@@ -297,7 +307,7 @@
     "fig, ax = plt.subplots(1, 1, figsize=(7.2, 6))\n",
     "\n",
     "ax.scatter(corner['P'], corner['logg'], color=colors,\n",
-    "           marker='o', s=7, linewidth=0, cmap=cmap, norm=norm)\n",
+    "           marker='o', s=15, linewidth=0, cmap=cmap, norm=norm)\n",
     "cs = ax.scatter([-9999, -9999], [-9999, -9999], c=[norm.vmin, norm.vmax], \n",
     "                cmap=cmap, norm=norm) # major hack to put in colorbar!\n",
     "cb = fig.colorbar(cs)\n",
@@ -323,11 +333,177 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What is up with those points at P<10?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "weirdos = corner.groupby('apogee_id').filter(lambda x: np.percentile(np.log(x['P']), 85) < np.log(10.))\n",
+    "weirdos = np.unique(weirdos['apogee_id']).astype('U25')\n",
+    "len(weirdos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5py.File(samples_file) as f:    \n",
+    "    for apid in weirdos:\n",
+    "        star = AllStar.get_apogee_id(session, apid)\n",
+    "        data = star.apogeervdata()\n",
+    "        samples = JokerSamples.from_hdf5(f[apid])\n",
+    "\n",
+    "        # fig = plot_data_orbits(data, samples, xlim_choice='tight')\n",
+    "        fig, ax = plt.subplots(1, 1, figsize=(8, 6))\n",
+    "        _ = data.plot(ax=ax)\n",
+    "        ax.set_xlabel('BMJD')\n",
+    "        ax.set_ylabel('RV [{0:latex_inline}]'.format(u.km/u.s))\n",
+    "        fig.tight_layout()\n",
+    "        fig.savefig('../plots/astero/{0}.png'.format(apid), dpi=250)\n",
+    "        plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Are any of those stars in APOKASC?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "apokasc = fits.getdata('../data/APOKASC_cat_v4.3.4.fits')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unq_corner = np.unique(corner['apogee_id']).astype('U25')\n",
+    "in_apokasc = np.isin(unq_corner, np.asarray(apokasc['2MASS_ID']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in_apokasc.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5py.File(samples_file) as f:    \n",
+    "    for apid in unq_corner[in_apokasc]:\n",
+    "        star = AllStar.get_apogee_id(session, apid)\n",
+    "        data = star.apogeervdata()\n",
+    "        samples = JokerSamples.from_hdf5(f[apid])\n",
+    "\n",
+    "        # fig = plot_data_orbits(data, samples, xlim_choice='tight')\n",
+    "        fig, ax = plt.subplots(1, 1, figsize=(8, 6))\n",
+    "        _ = data.plot(ax=ax)\n",
+    "        ax.set_xlabel('BMJD')\n",
+    "        ax.set_ylabel('RV [{0:latex_inline}]'.format(u.km/u.s))\n",
+    "        fig.tight_layout()\n",
+    "#         fig.savefig('../plots/astero/{0}.png'.format(apid), dpi=250)\n",
+    "#         plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Picked by eye"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "by_eye = ['2M13424150+2819081', '2M06390580+3444271', '2M13423922+2827574', '2M14035445+2914424', \n",
+    "          '2M15184139+0206004', '2M16333828+0010147', '2M18544319+0025050', '2M19403294+2438335',\n",
+    "          '2M23435214+6122267', '2M23500237+6053208']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_phase_fold(data, sample, ax=None):\n",
+    "    orbit = sample.get_orbit(0)\n",
+    "    P = sample['P']\n",
+    "    M0 = sample['M0']\n",
+    "    \n",
+    "    # HACK: hard-set getting the median\n",
+    "    t0 = data.t0 + (P/(2*np.pi)*M0).to(u.day, u.dimensionless_angles())\n",
+    "    phase = data.phase(P=P, t0=t0)\n",
+    "\n",
+    "    if ax is None:\n",
+    "        ax = plt.gca()\n",
+    "\n",
+    "    # plot the phase-folded data and orbit\n",
+    "    rv_unit = u.km/u.s\n",
+    "    ax.errorbar(phase, data.rv.to(rv_unit).value,\n",
+    "                data.stddev.to(rv_unit).value,\n",
+    "                linestyle='none', marker='o', color='k', markersize=5)\n",
+    "\n",
+    "    phase_grid = np.linspace(0, 1, 1024)\n",
+    "    ax.plot(phase_grid, orbit.radial_velocity(t0 + phase_grid*P),\n",
+    "            marker='', zorder=-1, color='#aaaaaa')\n",
+    "    ax.set_xlabel('phase')\n",
+    "    # ax.set_ylabel('radial velocity [{0:latex_inline}]'.format(rv_unit))\n",
+    "    # ax.set_title(r'$\\chi^2 = {0:.2f}$'.format(chisq))\n",
+    "\n",
+    "    return ax.figure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5py.File(samples_file) as f:    \n",
+    "    for apid in by_eye:\n",
+    "        star = AllStar.get_apogee_id(session, apid)\n",
+    "        data = star.apogeervdata()\n",
+    "        samples = JokerSamples.from_hdf5(f[apid])\n",
+    "    \n",
+    "        fig, axes = plt.subplots(1, 2, figsize=(15, 5), sharey=True)\n",
+    "        fig = plot_data_orbits(data, samples, xlim_choice='tight', \n",
+    "                               highlight_P_extrema=False, n_times=16384, ax=axes[0])\n",
+    "        \n",
+    "        j = samples['P'].argmin()\n",
+    "        plot_phase_fold(data, samples[j], ax=axes[1])\n",
+    "        fig.tight_layout()\n",
+    "#         fig.savefig('../plots/astero/{0}.png'.format(apid), dpi=250)\n",
+    "#         plt.close(fig)\n",
+    "#         break"
+   ]
   },
   {
    "cell_type": "code",
